site/_styles/header.css
/* Header
-------------------------------------------------------------------------------------------------*/
/* sticky header for browsers without `position: sticky` support. adapted from 
https://www.w3schools.com/howto/howto_js_sticky_header.asp.  scroll event handler that applies 
.sticky-header class is in browser-support.js. */

.sticky-header {
    position: fixed;
    top: 0;
    width: 100%    
}

.sticky-header + .bd-container {
    padding-top: 5.6rem;
    padding-top: var(--pst-header-height);
}

/* horizontally center the main header container */
.bd-header {
    display: block;
    border: 1px solid red;
}

.bd-header .bd-header__inner {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* place some space between section and icon links, and icon links and end of view window*/
.bd-header .navbar-header-items__center,
.bd-header .navbar-header-items__end {
    margin-right: 1rem;
}

/* the basic approach for header element ayout is taken from the second last example in 
../tests/header-test.html. vertical centering of elements *within* the main 
.navbar-header-items container (center and end sections) is done by setting 
`display: inline-block; vertical-alignment: middle;` on the (near) tip link elements; then, 
`position: relative; top: 50%; transform: translateY(-50%).` is used on navbar-header-items 
container itself.  there are other ways of doing it, but this seems the simplest and most 
efficient. the remaining logo, sidebar toggle, and mobile search button are also vertically 
centered using with the `position: relative; top: 50%; transform: translateY(-50%).` approach*/

/* change header elements with `display: flex` in the theme to `display: inline-block` so they are 
arranged horizontally and there is no mixing of flex and block display modes. */
.bd-header .navbar-header-items__start,
.bd-header .navbar-header-items__center,
.bd-header .navbar-header-items__end,
.bd-header .navbar-nav,
.bd-header .navbar-item,
.bd-header label.sidebar-toggle, 
.navbar-brand,
/* navbar-persistent--mobile not set in theme but included here to horizontally stack */
.navbar-persistent--mobile {
    display: inline-block;
    /* border: 1px solid red; */
}

/* horizontally stack section links, icon links, search and theme buttons with vertical alignment.
applies to sidebar elements too */
.navbar-nav li,
.search-button,
.theme-switch-button {
    display: inline-block;
    vertical-align: middle;
    border: 1px solid blue;
}

/* repeat pydata-sphinx-theme rule(s) for turning off sidebar toggle & mobile search button
(necessary due to its inclusion in the display: inline-block list above) */
@media(min-width:960px) {
    label.sidebar-toggle.primary-toggle {
        display: none
    }

    .navbar-persistent--mobile {
        display: none
    }
}

/* right align section & icon link etc container & mobile search button */
.bd-header .navbar-header-items,
.navbar-persistent--mobile {
    float: right;
}

/* left align the sidebar toggle button */
.bd-header label.sidebar-toggle {
    float: left;
}

/* pydata-sphinx-theme sets heights of navbar-item & navbar-brand with --pst-header-height
custom varable. navbar-brand is re-set here for browsers without custom var support.  navbar-item
is handled separately below.  the height on bd-header__inner must also be set as it is the parent 
of all the vertically `translateY` centered elements below.*/
.bd-header .bd-header__inner,
.navbar-brand {
    height: 5.6rem;
    height: var(--pst-header-height);
    max-height: 5.6rem;
    max-height: var(--pst-header-height);
}

/* leave navbar-item to scale to its contents so that it does not inerfere with centering of parent 
navbar-header-items below*/
.bd-header .navbar-item {
    /* TODO: reset to --pst-header-height if flex supported */
    height: auto;
}

/* limit logo height for older safari and ie browsers - adapted from numpy docs  */
.navbar-brand img {
    height: 4.6rem;
    height: calc(var(--pst-header-height) - 1rem);
    width: auto;
}

/* vertically center main rhs container etc.  parent elements must have a fixed height */
.bd-header .navbar-header-items,
.navbar-persistent--mobile,
.bd-header label.sidebar-toggle {
    position: relative;
    top: 50%;
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    border: 1px solid green; 
}

/* re-set header elements to their theme settings if flex is adequately supported.  
`flex-basis: min-content` is not required, but a work around test for `column-gap: 1rem`, which is
not possible to test for in it's flex mode directly - see https://ishadeed.com/article/flexbox-gap/
*/
/* TODO: can we lose the work around? */
@supports(display: flex) and (align-items: center) and (justify-content: end) and (flex-basis: min-content) {
    .bd-header {
        display: flex;
    }

    .bd-header .bd-header__inner {
        display: flex;
        margin-left: unset;
        margin-right: unset;
    }

    .bd-header .navbar-header-items__start,
    .bd-header .navbar-header-items__center,
    .bd-header .navbar-header-items__end,
    .bd-header .navbar-nav,
    .bd-header .navbar-item,
    .bd-header label.sidebar-toggle, 
    .navbar-brand,
    /* navbar-persistent--mobile not set in theme but included here to horizontally stack */
    .navbar-persistent--mobile {
        display: flex;
        /* border: 1px solid red; */
    }
    
    .navbar-nav li,
    .search-button,
    .theme-switch-button {
        display: flex;
        vertical-align: unset;
        border: 1px dashed blue;
    }

    /* repeat pydata-sphinx-theme rule(s) for turning off "mobile" res sidebar toggle & search button
    (necessary due to its includion in the display: inline-block list above) */
    @media(min-width:960px) {
        label.sidebar-toggle.primary-toggle {
            display: none
        }

        .navbar-persistent--mobile {
            display: none
        }
    }

    /* `float: *` settings are ignored in `display: flex` so no need to unset here */

    /* reset to navbar-item height */
    .bd-header .navbar-item {
        height: var(--pst-header-height);
    }

    .bd-header .navbar-header-items,
    .navbar-persistent--mobile,
    .bd-header label.sidebar-toggle {
        position: unset;
        top: unset;
        -moz-transform: unset;
        -ms-transform: unset;
        -webkit-transform: unset;
        transform: unset;
        border: 1px dashed green;
    }
}

